--- a/html/main.html
+++ b/html/main.html
@@ -6,7 +6,18 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="">
+		<div class="innerwrapper">
+			<div class="left">
+				<div class="leftsidebar-inner">
+					<div class="mainlogo"></div>
+					<div class="leftsidemenubar">menu01</div>
+					<div class="leftsidemenubar">menu02</div>
+					<div class="leftsidemenubar">menu03</div>
+				</div>
+			</div>
+			<div class="mainscreen"></div>
+			<div class="right"></div>
+		</div>
 	</div>
 
 </body>
