1차 뼈대 수정

--- a/html/main.html
+++ b/html/main.html
@@ -15,8 +15,14 @@
 					<div class="leftsidemenubar">menu03</div>
 				</div>
 			</div>
-			<div class="mainscreen"></div>
-			<div class="right"></div>
+
+			<div class="mainscreen">
+				<div class="main-inner"></div>
+			</div>
+
+			<div class="right">
+				<div class="rightsidevar-inner"></div>		
+			</div>
 		</div>
 	</div>
 
