프로필 사진 등록

--- a/html/main.html
+++ b/html/main.html
@@ -9,7 +9,7 @@
 		<div class="innerwrapper">
 			<div class="left">
 				<div class="leftsidebar-inner">
-					<div class="mainlogo"></div>
+					<a class="mainlogo" href="http://www.naver.com"><img src="C:\dev_source\front\private Blog\img\profile.jpg"></a>
 					<div class="leftsidemenubar">menu01</div>
 					<div class="leftsidemenubar">menu02</div>
 					<div class="leftsidemenubar">menu03</div>
