자잘한 사항 수정 및 js파일 추가

--- a/html/main.html
+++ b/html/main.html
@@ -3,6 +3,7 @@
 <head>
 	<title>레이아웃</title>
 	<link rel="stylesheet" type="text/css" href="../css/resume.css">
+	<script type="text/javascript" src="../js/main.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -25,6 +26,5 @@
 			</div>
 		</div>
 	</div>
-
 </body>
 </html>
